--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "dayjs": "^1.11.3",
+    "framer-motion": "^6.5.1",
     "i18next": "^21.8.12",
     "i18next-http-backend": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
